<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MR2</string>
    <string name="tab_all">Notes</string>
    <string name="tab_vocal">Voice</string>
     <string name="tab_passwords">Passwords</string>
    <string name="note">Note</string>
    <string name="note_is_empty">Note is empty</string>
    <string name="save">Save</string>
    <string name="note_title">Note Title</string>
    <string name="title">Title</string>
    <string name="write_a_note" tools:ignore="TypographyEllipsis">Write a note...</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="add_notes">Add notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="bottom_sheet_share">Share</string>
    <string name="bottom_sheet_delete">Delete</string>
    <string name="custom_model_title">Delete a note</string>
    <string name="custom_model_description">Are you sure you want to delete this note</string>
    <string name="custom_model_yes">Yes</string>
    <string name="custom_model_no">No</string>

    <string-array name="labels">
        <item>Voice</item>
        <item>Todo</item>
        <item>Passwords</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_audio_recording">AudioRecordingActivity</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="cancel">Cancel</string>
    <string name="save_the_vocal">Save the vocal</string>
    <string name="your_vocal_title">your vocal title...</string>
    <string name="time">00:00</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tag">Tag</string>
    <string name="add_new_tag">Add new tag</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="title_activity_view_password">ViewPasswordActivity</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_this_note">Schedule this note</string>
    <string name="title_activity_preview_audio">PreviewAudioActivity</string>
    <string name="last_edit">Last edited</string>
    <string name="service_name">Service name</string>
    <string name="extra_notes">Extra notes</string>
    <string name="recording_saved">Recording saved successfully.</string>
    <string name="note_removed">Note removed</string>
    <string name="notification_schedule">Notification Scheduled</string>
    <string name="empty_note_warning">Note cannot be empty</string>
    <string name="delete_note">Delete this note</string>
    <string name="delete_note_confirmation">Are you sure you want to delete this note</string>
</resources>