<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:paddingVertical="20sp"
        android:paddingHorizontal="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="5sp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="5sp"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/save_the_vocal"
            />
        <EditText
            android:id="@+id/vocal_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_vocal_title"
            android:layout_marginVertical="10sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:layout_marginRight="30sp"
                android:id="@+id/cancelBtn"
                android:layout_width="80sp"
                android:layout_height="50sp"
                android:textAllCaps="false"
                android:text="@string/cancel"
                />
            <Button
                android:layout_marginLeft="30sp"
                android:id="@+id/saveBtn"
                android:layout_width="80sp"
                android:layout_height="50sp"
                android:backgroundTint="@color/black"
                android:textAllCaps="false"
                android:text="@string/save"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>