<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.PasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar_edit_password"
            layout="@layout/toolbar_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/service_name"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="16sp"
            android:layout_marginTop="10sp"
            android:hint="@string/service_name"
            />
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="16sp"
            android:layout_marginTop="10sp"
            android:hint="@string/prompt_email"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="horizontal"
            android:layout_gravity="center"

            >
            <EditText
                android:layout_width="250sp"
                android:layout_height="50sp"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="10sp"
                android:id="@+id/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:hint="@string/prompt_password"
                />
            <ImageButton
                android:id="@+id/see_password"
                android:layout_width="50sp"
                android:layout_gravity="center_vertical"
                android:layout_height="50sp"
                android:background="@color/white"
                android:layout_marginRight="10sp"
                android:src="@drawable/eye_24" />
            <ImageButton
                android:id="@+id/generate_password"
                android:layout_width="50sp"
                android:layout_gravity="center_vertical"
                android:layout_height="50sp"
                android:background="@color/white"
                android:src="@drawable/sync_24" />

        </LinearLayout>
        <EditText
            android:id="@+id/notes_input"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="16sp"
            android:layout_marginTop="10sp"
            android:hint="@string/extra_notes"
            />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>