<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.tag.CreateTagFragment">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:maxHeight="400sp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:orientation="vertical"
            android:elevation="5sp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="5sp"
            android:paddingHorizontal="10sp"
            android:paddingVertical="20sp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="30sp"

            >

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/add_new_tag"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:id="@+id/tag_name"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:gravity="right"
                >
                <Button
                    android:id="@+id/cancel_add_tag"
                    android:layout_width="80sp"
                    android:layout_height="50sp"
                    android:background="@color/white"
                    android:text="@string/cancel"
                    />
                <Button
                    android:layout_marginHorizontal="10dp"
                    android:id="@+id/save_add_tag"
                    android:layout_width="80sp"
                    android:layout_height="50sp"
                    android:background="@color/white"
                    android:text="@string/save"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>