<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.mr2.activity.EditActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context="com.mr2.activity.EditActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:hint="@string/title"
            android:inputType="textCapWords"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />






        <EditText
            android:id="@+id/edit_text_body"
            android:layout_width="match_parent"
            android:layout_height="400sp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/write_a_note"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="@string/schedule_this_note"
            android:layout_marginHorizontal="20sp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginVertical="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-30dp"
                android:layout_marginRight="-30dp"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:scaleX="0.7"
                android:scaleY="0.7" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:layout_gravity="center"
                android:scaleY="0.7"
                android:scaleX="0.7"
                android:layout_marginLeft="-30dp"
                android:layout_marginRight="-30dp"/>
        </LinearLayout>





    </LinearLayout>
</LinearLayout>